prevent overflowing of splitview views and parts
fixes #78167

--- a/src/vs/base/browser/ui/splitview/splitview.css
+++ b/src/vs/base/browser/ui/splitview/splitview.css
@@ -30,6 +30,7 @@
 .monaco-split-view2 > .split-view-container > .split-view-view {
 	white-space: initial;
 	position: absolute;
+	overflow: hidden;
 }
 
 .monaco-split-view2 > .split-view-container > .split-view-view:not(.visible) {
